Fix spacing in `About`

--- a/src/GUI/Theme/Styles.css
+++ b/src/GUI/Theme/Styles.css
@@ -276,8 +276,17 @@ QDialog
 
 QDialog QLabel
 {
-    margin: 40px 40px 40px 40px;
     color: white;
+}
+
+QDialog QLabel[left="true"]
+{
+    margin: 0px 0px 0px 60px;
+}
+
+QDialog QLabel[right="true"]
+{
+    margin: 30px 60px 30px 0px;
 }
 
 QDialog QPushButton
